<resources>
    <string name="app_name">CursoAndroid</string>
    <string name="user_name">Nombre del usuario</string>
    <string name="user_password">Contraseña</string>
    <string name="user_button">Iniciar</string>
    <string name="relative_button">Acción 1</string>
    <string name="relative_text">Texto Acción 1</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_username">Escriba su usuario</string>
    <string name="forgot_password_button_text">Recuperar contraseña</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="home_text">Pantalla principal</string>
    <string name="home_web_page_view">Mostrar página web</string>
    <string name="home_call">Llamar</string>
    <string name="home_settings">Configuración</string>
    <string name="menu_option1">Mostrar sitio web</string>
    <string name="menu_option2">Marcación telefónica</string>
    <string name="menu_option3">Configuración del dispositivo</string>
    <string name="menu_sub1">Submenú 1</string>
    <string name="menu_sub_option1">Opción submenú 1</string>
    <string name="menu_context_edit">Editar</string>
    <string name="menu_context_share">Compartir</string>
    <string name="alert_title">Alerta</string>
    <string name="alert_message">Mensaje de alerta</string>
    <string name="btn_alert">Mostrar alert</string>
    <string name="required_edittext">Campo obligatorio</string>
    <string name="add_student_name">Nombre(s)</string>
    <string name="add_student_paternal_surname">Apellido paterno</string>
    <string name="add_student_maternal_surname">Apellido paterno</string>
    <string name="add_student_email">Correo electrónico</string>
    <string name="add_student_phone_number">Número telefónico</string>
    <string name="add_student_group">Grupo</string>
    <string name="add_student_grade">Grado</string>
    <string name="add_student_button_save">Guardar datos</string>
    <string name="add_student_button_cancel">Cancelar</string>
    <string name="add_student_cancel">Cancelar</string>
    <string name="add_student_text">Guardar datos</string>
</resources>