<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/menuOption1"
    android:title="@string/menu_option1"
    android:icon="@drawable/ic_menu_web"
    app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/menuOption2"
        android:title="@string/menu_option2"
        />
    <item
        android:id="@+id/menuOption3"
        android:title="@string/menu_option3"
        />

    <item
        android:id="@+id/submenu1"
        android:title="@string/menu_sub1"
        android:icon="@drawable/ic_menu_submenu"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/subMenuOption1"
                android:title="@string/menu_sub_option1"
                />
        </menu>
    </item>
</menu>