<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/add_student_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPaternalSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/add_student_paternal_surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMaternalSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/add_student_maternal_surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/add_student_email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/add_student_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_student_group"
            android:inputType="number"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/etGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_student_grade"
            android:inputType="number"
            android:textSize="19sp" />

        <Button
            android:id="@+id/btnAddStudent"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorError"
            android:hint="@string/add_student_button_save"
            android:insetLeft="40dp"
            android:insetRight="40dp"
            />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorError"
            android:hint="@string/add_student_button_cancel"
            android:insetLeft="40dp"
            android:insetRight="40dp"
            />

    </LinearLayout>


</LinearLayout>