<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivImage"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/login_image"
        android:layout_height="@dimen/login_image"
        android:src="@drawable/ic_action_name"
        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_margin="@dimen/login_margin"
        android:inputType="number"
        android:drawablePadding="@dimen/icon_padding"
        android:drawableStart="@drawable/ic_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_below="@id/ivImage"
        />


    <EditText
        android:layout_margin="@dimen/login_margin"
        android:drawablePadding="@dimen/icon_padding"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/ic_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:layout_below="@id/etUsername"
        />

    <Button
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_button"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>