<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txtHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <Button
        android:id="@+id/btnShowView"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_web_page_view"
        app:layout_constraintTop_toBottomOf="@id/txtHome"
        />


    <Button
        android:id="@+id/btnDial"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_call"
        app:layout_constraintTop_toBottomOf="@id/btnShowView"
        />

    <Button
        android:id="@+id/btnSettings"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_settings"
        app:layout_constraintTop_toBottomOf="@id/btnDial"
        />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"
        />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        app:layout_constraintTop_toBottomOf="@id/txtError"
        />


</androidx.constraintlayout.widget.ConstraintLayout>